# rust-zmq

./: README.md  test.cmd  test.sh
tests/: curve.rs
zmq-sys/: Cargo.toml  build.rs
